fixed oversized on mobile issue

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     background-color: #D33B36;
     /* background-color: #FC6226; */
     color: white;
+    overflow: auto;
 }
 
 .mars-background {
@@ -69,14 +70,14 @@ body {
     height: 100%;
     width: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.5)
+    background-color: rgba(0,0,0,0.5);
 }
 
 .modal-content {
     background-color: rgb(44, 54, 59);
-    margin: 15% auto;
-    padding: 20px;
-    width: 85%;
+    margin: 10% auto;
+    padding: 10px;
+    width: 87%;
     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2) 0 7px 20px 0 rgba(0,0,0,0.17);
     border-radius: 10px;
     animation-name: modalOpen;
